<resources>
    <string name="app_name">OVIKU_proj</string>
    <string name="welcome_text">Welcome to </string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="sign_in">Sign In</string>
    <string name="set_up_lock">Set up your lock</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_username_or_email">Username or email</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="settings">Settings</string>
    <string name="placeholder1">holder1</string>
    <string name="placeholder2">holder2</string>
    <string name="remove_lock">Remove lock</string>
    <string name="save_name">Save</string>
    <string name="lock_name">Lock name</string>
    <string name="email_incorrect"></string>
    <string-array name="category_more">
        <item name="log_out">Log out</item>
        <item name="add_virtual_key">Add virtual key</item>
        <item name="add_new_lock">Add new lock</item>
        <item name="my_locks">My locks</item>
    </string-array>
    <string-array name="category_settings">
        <item name="lock_name">Name</item>
        <item name="lock_info">Lock info</item>
        <item name="theme_color">Theme</item>
    </string-array>
    <string-array name="category_theme">
        <item name="Dark">Dark</item>
        <item name="Light">Dark</item>
    </string-array>
</resources>
