<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.doni.oviku_proj.CreateAccountPage"
    android:background="@drawable/background_dark">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:src="@drawable/oviku_logo1"
        android:id="@+id/logo"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vName"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/White"
        android:textColorHint="@color/White"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vEmail"
        android:layout_below="@+id/vName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/White"
        android:textColorHint="@color/White"/>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:id="@+id/vPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/White"
        android:textColorHint="@color/White"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:id="@+id/vConfirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/White"
        android:textColorHint="@color/White"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vConfirm_password"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/OvikuButton"
        android:onClick="SignUp"/>

</RelativeLayout>
