<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.doni.oviku_proj.HomePage"
    android:background="@drawable/background">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:id="@+id/welcome_text"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in"
        android:text="@string/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="40dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_up_lock"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_in"
        android:text="@string/set_up_lock"
        android:layout_marginTop="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account"
        android:text="@string/create_new_account"
        android:textColorHighlight="#3d4be2"
        android:layout_below="@+id/set_up_lock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
